# haskell-server

./: .gitignore  DB.hs  LICENSE  Main.hs  Makefile  Procfile  README.md  SqlTypes.hs  Types.hs  credentials.safe  data.db  haddock.html  haskellserver.cabal  init.sql  key.json  open_haddock.sh
app/: Main.hs
src/: Api.hs  Auth.hs  Config.hs  DB.hs  Main.hs  Typeclasses.hs  Types.hs  xdd.hs
src/Api/: Auth.hs  Events.hs  Tasks.hs  Teams.hs  Users.hs
src/Types/: Checklist.hs  Event.hs  Imports.hs  Salary.hs  Task.hs  Team.hs  User.hs  Usergroup.hs
src/auth/: Auth.hs
test/: AuthTest.hs  Spec.hs
