name:                haskellserver
version:             0.1.0.0
synopsis:            simple rest api
homepage:            https://github.com/maciejspychala/haskell-server
license:             MIT
license-file:        LICENSE
author:              maciejspychala
maintainer:          maciej.spychala@student.put.poznan.pl
copyright:           2017 maciejspychala
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskellserver
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       DB,
                       Typeclasses,
                       Types,
                       Types.Checklist,
                       Types.Event,
                       Types.Imports,
                       Types.Task,
                       Types.Team,
                       Types.Salary,
                       Types.User,
                       Types.Usergroup

  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8, 
                       scotty >=0.11,
                       text >=1.2,
                       aeson,
                       bytestring,
                       transformers,
                       postgresql-simple,
                       postgresql-libpq,
                       time,
                       wai-cors,
                       jose,
                       haskellserver

library
    hs-source-dirs:      lib
    default-language:    Haskell2010
    exposed-modules:     Auth
    build-depends:       base,
                         aeson,
                         bytestring,
                         jose,
                         transformers,
                         MonadRandom,
                         mtl,
                         lens,
                         text

test-suite auth-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             AuthTest.hs
    build-depends:       base,
                         haskellserver
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
                        