name:                haskellserver
version:             0.1.0.0
synopsis:            simple rest api
homepage:            https://github.com/maciejspychala/haskell-server
license:             MIT
license-file:        LICENSE
author:              maciejspychala
maintainer:          maciej.spychala@student.put.poznan.pl
copyright:           2017 maciejspychala
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskellserver
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8, 
                       scotty >=0.11,
                       text >=1.2,
                       mtl,
                       aeson,
                       bytestring,
                       transformers,
                       postgresql-simple,
                       postgresql-libpq,
                       time,
                       wai-cors,
                       jose,
                       http-types,
                       haskellserver

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    other-extensions:    OverloadedStrings
    exposed-modules:     Auth,
                         Api,
                         Api.Users,
                         Api.Teams,
                         Api.Tasks,
                         Api.Events,
                         Api.Auth,
                         Config,
                         DB,
                         Typeclasses
                         Types,
                         Types.Imports,
                         Types.Checklist,
                         Types.Event,
                         Types.Salary,
                         Types.Task,
                         Types.Team,
                         Types.User,
                         Types.Usergroup

    build-depends:       base,
                         scotty >=0.11,
                         aeson,
                         bytestring,
                         jose,
                         transformers,
                         MonadRandom,
                         mtl,
                         lens,
                         text,
                         postgresql-simple,
                         postgresql-libpq,
                         time,
                         wai-cors,
                         http-types

test-suite auth-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       base,
                         bytestring,
                         haskellserver,
                         hspec,
                         mtl,
                         transformers,
                         scotty,
                         wai-cors
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

